--- a/index.html
+++ b/index.html
@@ -7,23 +7,21 @@
 </head>
 <body>
 <script>
-let userInput = prompt("Enter your number:");
-
-// Convert the user input from string to number
-let number = parseInt(userInput);
-
+let userInput = parseInt(prompt("Enter your number:"));
 if (!isNaN(number)) {
-    // Check if the number is odd or even
     if (number % 2 === 0) 
     {
-        document.write(`${number} is Even number.`);
-    } else {
-        document.write(`${number} is Odd number.`);
+    document.write(`${number} is Even number.`);
+    } 
+    else
+    {
+    document.write(`${number} is Odd number.`);
     }
   } 
-else {
+  else
+ {
     document.write("Invalid number. Please enter a valid number.");
-}
+ }
  </script>
 </body>
 </html>
