--- a/numbercheck.html
+++ b/numbercheck.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Greater number</title>
 </head>
 <body>
     <script>
-    // Prompt the user to enter two numbers
-    let number1 = parseFloat(prompt("Enter the first number:"));
-    let number2 = parseFloat(prompt("Enter the second number:"));
-    
-    
-    // Check if inputs are valid numbers
-    if (isNaN(number1) || isNaN(number2)) {
+    let num1 = parseFloat(prompt("Enter first number:"));
+    let num2 = parseFloat(prompt("Enter second number:"));
+    if (isNaN(num1) || isNaN(num2))
+     {
         alert("Please enter valid numbers.");
-    } else {
-        // Determine the largest number
-        if (number1 > number2) {
-            alert("The largest number is: " + number1);
-        } else if (number2 > number1) {
-            alert("The largest number is: " + number2);
-        } else {
+    } 
+    else 
+    {
+        if (num1 > num2)
+        {
+            alert("The largest number is: " + num1);
+        } 
+        else 
+        if (num2 > num1)
+        {
+            alert("The largest number is: " + num2);
+        } 
+        else 
+        {
             alert("Both numbers are equal.");
         }
     }
 </script>
-
 </body>
 </html>
