--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
 </head>
 <body>
 <script>
-let userInput = parseInt(prompt("Enter your number:"));
-if (!isNaN(number)) {
-    if (number % 2 === 0) 
-    {
-    document.write(`${number} is Even number.`);
-    } 
-    else
-    {
-    document.write(`${number} is Odd number.`);
+let Userinput = prompt("Enter a number:");
+let num = parseInt(Userinput);
+if (!isNaN(num)) {
+
+    if (num % 2 === 0) {
+        alert(num + " is even number.");
+    } else {
+        alert(num + " is odd number.");
     }
-  } 
-  else
- {
-    document.write("Invalid number. Please enter a valid number.");
- }
+} else {
+    alert("Invalid input. Please enter a valid number.");
+}
  </script>
 </body>
 </html>
